Fix horizontal scrolling in desktop version

--- a/src/app/less/base.less
+++ b/src/app/less/base.less
@@ -205,7 +205,8 @@ video {
   height: 100%;
   overflow-x: hidden;
   overflow-y: auto;
-  padding: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .title-action {
