--- a/src/app/less/navigation.less
+++ b/src/app/less/navigation.less
@@ -334,7 +334,7 @@ body.mini-navbar .navbar-default .nav > li > .nav-second-level li a {
 }
 
 .navbar-static-top {
-  margin-bottom: 0;
+  margin-bottom: 30px;
   margin-top: -50px;
 }
 
